--- a/examples/table/index.html
+++ b/examples/table/index.html
@@ -2,21 +2,21 @@
 
 <div x-component="/table/index.js">
   <button .on-click="create()">create</button>
-  <button .on-click="clear()">clear</button>
   <button .on-click="prepend()">prepend</button>
   <button .on-click="append()">append</button>
   <button .on-click="removeFirst()">removeFirst</button>
   <button .on-click="removeLast()">removeLast</button>
+  <button .on-click="clear()">clear</button>
   <table class="table table-hover table-striped test-data">
     <tbody>
       <template x-for="item of list" :key="item.id">
         <tr @class="item.id === selected ? 'danger' : ''">
           <td class="col-md-1">${item.id}</td>
           <td class="col-md-4">
-            <a .on-click="select(item.id)">${item.label}</a>
+            <a .on-click="select(item)">${item.label}</a>
           </td>
           <td class="col-md-1">
-            <a .on-click="remove(item.id)"
+            <a .on-click="remove(item)"
               ><span
                 class="glyphicon glyphicon-remove"
                 aria-hidden="true"
